--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/new_app_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/new_app_logo"
         android:supportsRtl="true"
