--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:16.0.0'
 
     implementation 'com.google.android.libraries.places:places:1.1.0'
-
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 }
