--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,6 @@ android {
 }
 
 dependencies {
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -50,10 +49,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
 
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
@@ -63,25 +60,18 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     //Google Play services
-
-
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
-
     implementation 'com.google.android.libraries.places:places:1.1.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
-
-
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-
-
-
     //Mapbox Dependencies
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.3.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.34.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.34.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
