--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        renderscriptTargetApi 28
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -25,6 +27,7 @@ android {
 
 
     }
+
 
     //Temporary fix until alpha10
     packagingOptions {
@@ -74,4 +77,6 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.34.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.34.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    implementation 'com.github.uin3566:AllAngleExpandableButton:v1.2.0'
 }
