--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@drawable/app_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+
         >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -44,7 +45,7 @@
         <activity
             android:name=".ui.AboutUsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+                        android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".ui.EmergencyActivity"
