--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
             url "https://maven.google.com"
         }
 
+        maven { url "https://jitpack.io" }
 
         maven { url 'https://mapbox.bintray.com/mapbox' }
     }
